@@ -269,15 +269,15 @@ omxCheckCloseEnough(model[['test39e']]@result, cvectorize(rvectorize(A@values)),
 omxCheckCloseEnough(model[['test39f']]@result, cvectorize(rvectorize(t(A@values))), 0.001)
 omxCheckCloseEnough(model[['test39g']]@result, rvectorize(cvectorize(A@values)), 0.001)
 omxCheckCloseEnough(model[['test39h']]@result, rvectorize(cvectorize(t(A@values))), 0.001)
-omxCheckCloseEnough(model[['test40']]@result,  matrix(Re(eigen(A@values)$vectors), 5, 5), 0.001)
-omxCheckCloseEnough(model[['test40a']]@result, matrix(Re(eigen(G@values)$vectors), 2, 2), 0.001)
-omxCheckCloseEnough(model[['test40b']]@result, matrix(Re(eigen(H@values)$vectors), 4, 4), 0.001)
-omxCheckCloseEnough(model[['test41']]@result,  matrix(Re(eigen(A@values)$values), 5, 1), 0.001)
-omxCheckCloseEnough(model[['test41a']]@result, matrix(Re(eigen(G@values)$values), 2, 1), 0.001)
-omxCheckCloseEnough(model[['test41b']]@result, matrix(Re(eigen(H@values)$values), 4, 1), 0.001)
-omxCheckCloseEnough(model[['test42']]@result,  matrix(Im(eigen(A@values)$vectors), 5, 5), 0.001)
-omxCheckCloseEnough(model[['test42a']]@result, matrix(Im(eigen(G@values)$vectors), 2, 2), 0.001)
-omxCheckCloseEnough(model[['test42b']]@result, matrix(Im(eigen(H@values)$vectors), 4, 4), 0.001)
-omxCheckCloseEnough(model[['test43']]@result,  matrix(Im(eigen(A@values)$values), 5, 1), 0.001)
-omxCheckCloseEnough(model[['test43a']]@result, matrix(Im(eigen(G@values)$values), 2, 1), 0.001)
-omxCheckCloseEnough(model[['test43b']]@result, matrix(Im(eigen(H@values)$values), 4, 1), 0.001)
+omxCheckCloseEnough(model[['test40']]@result,  mxEval(Re(eigen(A)$vectors), model), 0.001)
+omxCheckCloseEnough(model[['test40a']]@result, mxEval(Re(eigen(G)$vectors), model), 0.001)
+omxCheckCloseEnough(model[['test40b']]@result, mxEval(Re(eigen(H)$vectors), model), 0.001)
+omxCheckCloseEnough(model[['test41']]@result,  as.matrix(mxEval(Re(eigen(A)$values), model)), 0.001)
+omxCheckCloseEnough(model[['test41a']]@result, as.matrix(mxEval(Re(eigen(G)$values), model)), 0.001)
+omxCheckCloseEnough(model[['test41b']]@result, as.matrix(mxEval(Re(eigen(H)$values), model)), 0.001)
+omxCheckCloseEnough(model[['test42']]@result,  mxEval(Im(eigen(A)$vectors), model), 0.001)
+omxCheckCloseEnough(model[['test42a']]@result, mxEval(Im(eigen(G)$vectors), model), 0.001)
+omxCheckCloseEnough(model[['test42b']]@result, mxEval(Im(eigen(H)$vectors), model), 0.001)
+omxCheckCloseEnough(model[['test43']]@result,  as.matrix(mxEval(Im(eigen(A)$values), model)), 0.001)
+omxCheckCloseEnough(model[['test43a']]@result, as.matrix(mxEval(Im(eigen(G)$values), model)), 0.001)
+omxCheckCloseEnough(model[['test43b']]@result, as.matrix(mxEval(Im(eigen(H)$values), model)), 0.001)
