@@ -1,0 +1,8 @@
+#ifndef _FREEBSDMERGE_H_
+#define _FREEBSDMERGE_H_
+
+int freebsd_mergesort(void *base, size_t nmemb, size_t size, int (*cmp)(const void *, const void *));
+
+
+#endif // _FREEBSDMERGE_H_
+
