@@ -15,6 +15,7 @@ trunk
 * improving error messages in mxMatrix() function
 * added R documentation for rvectorize() and cvectorize()
 * implemented eigenvalues and eigenvectors
+* checked in implementation of mergesort
 
 Release 0.2.10-1172 (Mar 14, 2010)
 ==================================
